--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -25,6 +25,11 @@
 		@media(max-width: 750px) {
 			flex: 1 1 300px;
 			margin-bottom: 30px;
+			height: 300px;
+		}
+		@media(max-width: 550px) {
+			flex: 1 1 250px;
+			height: 250px;
 		}
 	}
 
@@ -102,6 +107,12 @@
 	&__right-info {
 		@include adaptiveValue("margin-bottom", 12, 6, $containerWidth, $minWidth, 1);
 		text-align: center;
+		&.anons {
+			p {
+				display: flex;
+				justify-content: space-between;
+			}
+		}
 	}
 
 	&__right-commands {
@@ -117,9 +128,11 @@
 		img {
 			max-width: 100px;
 			height: auto;
+			&.zenit {
+				max-width: 153px;
+			}
 			@media(max-width: 1100px) {
 				max-width: 60px;
-
 			}
 		}
 		p {
@@ -199,6 +212,10 @@
 		justify-content: space-between;
 		align-items: center;
 		a {
+			transition: all .3s ease 0s;
+			&:active, &:focus, &:hover {
+				color: var(--unnamed, #891342);
+			}
 			@media(max-width: 500px) {
 				display: none;
 			}
@@ -253,6 +270,10 @@
 		flex: 0 1 auto;
 		a {
 			text-decoration: underline;
+			transition: all .3s ease 0s;
+			&:active, &:focus, &:hover {
+				color: var(--unnamed, #891342);
+			}
 		}
 	}
 
@@ -283,6 +304,12 @@
 	&__title {
 		display: flex;
 		justify-content: space-between;
+		a {
+			transition: all .3s ease 0s;
+			&:active, &:focus, &:hover {
+				color: var(--unnamed, #891342);
+			}
+		}
 	}
 
 	&__body {
