--- a/src/scss/kvant.scss
+++ b/src/scss/kvant.scss
@@ -35,6 +35,18 @@
 				margin-top: 0;
 			}
 		}
+		.players__text {
+			display: flex;
+			flex-direction: column;
+			h4 {
+				flex: 0 1 auto;
+			}
+			span {
+				flex: 1 1 auto;
+				display: flex;
+				align-items: flex-end;
+			}
+		}
 		.players__image {
 			@include adaptiveValue("height", 490, 350, $containerWidth, $minWidth, 1);
 		}
