--- a/src/scss/partners.scss
+++ b/src/scss/partners.scss
@@ -17,7 +17,13 @@
 		flex-direction: column;
 		border-radius: 10px;
 		border: 2px solid var(--unnamed, #A7DCEB);
-		@include adaptiveValue("padding", 30, 15, $containerWidth, $minWidth, 1);
+		padding: 30px;
+		@media(max-width:1200px) {
+			padding: 20px;
+		}
+		@media(max-width: 600px) {
+			padding: 15px;
+		}
 	}
 
 	&__item-image {
@@ -42,19 +48,35 @@
 		flex: 1 1 auto;
 		text-align: left;
 		position: relative;
-		div {
+		.dropdown {
 			position: absolute;
-			width: 100%;
+			width: calc(100% + 64px);
 			top: 0;
 			left: 0;
+			right: 0;
 			background-color: #fff;
 			z-index: 1;
 			padding-bottom: 40px;
-			border-radius: 10px;
-			margin-left: -15px;
-			margin-right: -15px;
-			padding-left: 15px;
-			padding-right: 15px;
+			border-bottom-left-radius: 10px;
+			border-bottom-right-radius: 10px;
+			margin-left: -32px;
+			padding-left: 30px;
+			padding-right: 30px;
+			border-left: 2px solid var(--unnamed, #A7DCEB);
+			border-bottom: 2px solid var(--unnamed, #A7DCEB);
+			border-right: 2px solid var(--unnamed, #A7DCEB);
+			@media(max-width:1200px) {
+				margin-left: -22px;
+				padding-left: 20px;
+				padding-right: 20px;
+				width: calc(100% + 44px);
+			}
+			@media(max-width: 600px) {
+				margin-left: -17px;
+				padding-left: 15px;
+				padding-right: 15px;
+				width: calc(100% + 34px);
+			}
 		}
 	}
 
