--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -24,7 +24,7 @@
 // @import "base/sticky";
 
 //Галерея / gallery
-//@import 'libs/gallery/lightgallery';
+@import 'libs/gallery/lightgallery';
 //@import 'libs/gallery/lg-zoom';
 //@import 'libs/gallery/lg-fullscreen';
 //@import 'libs/gallery/lg-rotate';
